test/spec_vectors/simd_splat/fail/module_26.wat
(module (func $f64x2.splat-arg-empty (result v128) (f64x2.splat)))